feat(Injection): Use an injector for the service
Add service into the objects
